Not the best way to do it, but managed to incorporate python into the page now for custom alerts

--- a/blaskbotWeb/templates/alert.html
+++ b/blaskbotWeb/templates/alert.html
@@ -3,22 +3,33 @@
 
 <head>
     <title>Blaskbot Alerts</title>
-    <link rel="stylesheet" href={{url_for('static', filename='styles.css')}}>
+<style>
+    <!-- STYLESHEET -->
+</style>
 </head>
 
 <body bgcolor="#FFFFFF">
     <div id="alert_table">
-        <table width=1280>
+        <table width=960>
             <tr>
                 <td>
-                    <video id="alert_video" width="1280" height="720" autoplay>
-                      <source src={{url_for('static', filename='bits.mp4')}} type="video/mp4">
+                    <video id="alert_video" width="960" height="540" autoplay>
+                        <!-- VIDEO LINK -->
                     </video>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <h1>Lorum Ipsum Big Black Moon Dog Jumped Lazy Fox Thing Or W/E long long long wobbey beans testicular arrangement with the battle royale in star galactica</h1>
+                    <h1>
+                        <!-- BIT TEXT -->
+                    </h1>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h2>
+                        <!-- MESSAGE -->
+                    </h2>
                 </td>
             </tr>
         </table>
